# cuc-habitat

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: python-ci.yml
docs/: abstract.md  architecture-ladder.md  benchmark-matrix.md  falsifiers.md  glossary.md  habitat-spec.md  limitations.md  methodology.md
src/cuc_habitat/: __init__.py  agents.py  braillestream.py  cli.py  models.py  runner.py  scoring.py  world.py
studies/: 001-consciousness-models.md  002-current-ai-candidacy.md  003-threshold-requirements.md  004-embodiment-requirement.md  005-digital-causal-body.md  006-minimum-viable-architecture.md  007-falsification-suite.md  008-benchmark-matrix.md  009-agent-class-application.md  010-habitat-environment.md  011-habitat-scoring-protocol.md  012-alpha-baseline.md  013-alpha-to-beta-memory.md  014-alpha-vs-beta.md  015-beta-vs-gamma-workspace.md  016-gamma-vs-delta-calibration.md  017-delta-vs-epsilon-intrinsic-priorities.md  018-epsilon-vs-zeta-other-agent-modeling.md  019-zeta-vs-omega-recursive-modeling.md  020-omega-vs-field-coherence.md  README.md
tests/: test_smoke.py
